fix(styling): Compound Filter Operator dropdown too wide in BS4

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -652,10 +652,11 @@ $editor-modal-validation-summary-font-size:           13px !default;
 $editor-modal-validation-summary-font-style:          italic !default;
 
 /* Compound Filters */
+$compound-filter-bgcolor:                             #ffffff !default;
 $compound-filter-operator-select-font-family:         Consolas, "Lucida Console" !default; // use a monospace font so the operator descriptions are all aligned
 $compound-filter-operator-select-font-size:           14px !important !default;
 $compound-filter-operator-select-border:              1px solid #{lighten($primary-color, 15%)} !default;
-$compound-filter-bgcolor:                             #ffffff !default;
+$compound-filter-operator-select-width:               25px !default;
 $compound-filter-operator-border-radius:              4px 0 0 4px !default;
 $compound-filter-border-radius:                       0 4px 4px 0 !default;
 $compound-filter-text-weight:                         bold !default;
